initializer_list test

--- a/understanding-c++11/understanding-c++11.vcxproj
+++ b/understanding-c++11/understanding-c++11.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="compatibility.cpp" />
     <ClCompile Include="constructor_test.cpp" />
+    <ClCompile Include="initializer_test.cpp" />
     <ClCompile Include="lambda_test.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pod_test.cpp" />
