--- a/understanding-c++11/understanding-c++11.vcxproj
+++ b/understanding-c++11/understanding-c++11.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="thread_test.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="user_define_literal.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lambda_test.h" />
@@ -103,6 +104,7 @@
     <ClInclude Include="thread_test.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="user_define_literal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
