--- a/understanding-c++11/understanding-c++11.vcxproj.filters
+++ b/understanding-c++11/understanding-c++11.vcxproj.filters
@@ -23,6 +23,10 @@
     <ClCompile Include="user_define_literal.cpp">
       <Filter>c++11</Filter>
     </ClCompile>
+    <ClCompile Include="unlimited_union.cpp" />
+    <ClCompile Include="using_vs_typedef.cpp">
+      <Filter>c++11</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc.h">
@@ -59,6 +63,11 @@
     <ClInclude Include="user_define_literal.h">
       <Filter>c++11</Filter>
     </ClInclude>
+    <ClInclude Include="unlimited_union.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
+    <ClInclude Include="inline_namespace.h" />
+    <ClInclude Include="using_vs_typedef.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
