--- a/understanding-c++11/understanding-c++11.vcxproj.filters
+++ b/understanding-c++11/understanding-c++11.vcxproj.filters
@@ -119,6 +119,7 @@
     <ClInclude Include="smart_pointer.h">
       <Filter>c++11</Filter>
     </ClInclude>
+    <ClInclude Include="todo_next.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
