--- a/understanding-c++11/understanding-c++11.vcxproj.filters
+++ b/understanding-c++11/understanding-c++11.vcxproj.filters
@@ -56,9 +56,21 @@
     <ClCompile Include="variadic_template.cpp">
       <Filter>c++11</Filter>
     </ClCompile>
-    <ClCompile Include="alignof_alignas.cpp" />
-    <ClCompile Include="attribute.cpp" />
-    <ClCompile Include="raw_string_literal.cpp" />
+    <ClCompile Include="tuple_test.cpp">
+      <Filter>c++11</Filter>
+    </ClCompile>
+    <ClCompile Include="raw_string_literal.cpp">
+      <Filter>c++11</Filter>
+    </ClCompile>
+    <ClCompile Include="attribute.cpp">
+      <Filter>c++11</Filter>
+    </ClCompile>
+    <ClCompile Include="alignof_alignas.cpp">
+      <Filter>c++11</Filter>
+    </ClCompile>
+    <ClCompile Include="rvalue_refrence_and_move_constructor.cpp">
+      <Filter>c++11</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc.h">
@@ -129,9 +141,21 @@
     <ClInclude Include="variadic_template.h">
       <Filter>c++11</Filter>
     </ClInclude>
-    <ClInclude Include="alignof_alignas.h" />
-    <ClInclude Include="attribute.h" />
-    <ClInclude Include="raw_string_literal.h" />
+    <ClInclude Include="tuple_test.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
+    <ClInclude Include="raw_string_literal.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
+    <ClInclude Include="attribute.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
+    <ClInclude Include="alignof_alignas.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
+    <ClInclude Include="rvalue_refrence_and_move_constructor.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
