--- a/understanding-c++11/understanding-c++11.vcxproj.filters
+++ b/understanding-c++11/understanding-c++11.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClInclude Include="constexpr.h">
       <Filter>c++11</Filter>
     </ClInclude>
+    <ClInclude Include="unicode_support.h">
+      <Filter>c++11</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
